Changes with melon 1.9.0                                          01 Mar 2020
    *) Added MySQL module in script language
    *) Fixed file bugs in script language

Changes with melon 1.8.0                                          30 Sep 2019
    *) Updated Melang's productions

Changes with melon 1.7.0                                          20 Aug 2018
    *) Supported TCP network for melang

Changes with melon 1.6.12                                         14 Jul 2018
    *) Fixed some bugs in melang
    *) Supported Reactive Programming in melang

Changes with melon 1.6.11                                         03 Feb 2018
    *) Update License
    *) Add some basic functions for script language

Changes with melon 1.6.10                                         03 Aug 2017
    *) Added function to getting array length for melang script.
    *) Fixed some bugs for melang script.
    *) Supported adding property dynamically.

Changes with melon 1.6.9                                          01 Aug 2017
    *) Added reflection for melang script.
    *) Updated Red-Black Tree interfaces.
    *) Fixed a bug of keyword 'return' in melang script.
    *) Dropped keyword 'set' from melang script.
    *) Added garbage collector.

Changes with melon 1.6.8                                          22 May 2017
    *) Added script functions about matrix.

Changes with melon 1.6.7                                          20 May 2017
    *) Fixed some bugs of JSON.
    *) Added script functions about JSON.

Changes with melon 1.6.6                                          18 May 2017
    *) Added script function about Base64.
    *) Added script functions about DES, 3DES.
    *) Added script function about MD5.
    *) Added script functions about SHA1, SHA256.
    *) Added script function about RC4.
    *) Added script function about Prime Generator.

Changes with melon 1.6.5                                          17 May 2017
    *) Added script function about AES.
