@@ -1,6 +1,7 @@
 Changes with melon 1.9.0                                          01 Mar 2020
     *) Added MySQL module in script language
     *) Fixed file bugs in script language
+    *) Added more sys-module functions for melang
 
 Changes with melon 1.8.0                                          30 Sep 2019
     *) Updated Melang's productions
